[tool.poetry]
name = "osm2tactile"
version = "0.1.0"
description = "create tactile maps for visually impaired and blind people"
authors = ["Raphael Kamper <dev@raphiniert.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}
babel = "^2.14.0"
rich = "^13.7.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.3.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
